# TinySigLIP

./: .gitignore  README.md  download_coco.py  download_coco.sh  eval.py  eval.sh  eval_imagenet1k.py  eval_retrieval.py  main.py  prepare_data.py  prepare_data.sh  pyproject.toml  run.sh  train.py  train.sh
config/: config.yaml  config_colab_a100.yaml  config_colab_l4.yaml  config_colab_t4.yaml  config_remote.yaml
doc/: ablation.md  plan.md
tests/: __init__.py  test_coco_dataset_cache.py
tinysiglip/: coco_dataset.py  embedding_distillation.py  fake_dataset.py  loss.py  metrics.py  model.py  processor.py
