[project]
name = "tinysiglip"
version = "0.1.0"
description = "TinySigLIP: SigLIP Distillation via Affinity Mimicking and Weight Inheritance"
requires-python = ">=3.10,<3.11"
dependencies = [
    "datasets>=4.4.1",
    "fvcore>=0.1.5.post20221221",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "protobuf>=4.21.0",
    "pycocotools>=2.0.10",
    "sentencepiece>=0.2.1",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",

]

[tool.ruff.lint.isort]
known-first-party = ["tinysiglip"]


[tool.ty.environment]
python = "./.venv"
python-version = "3.10"
